<resources>
    <string name="app_name">TasksAndNotes</string>
    <string name="title_activity_main">TasksAndNotes</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="title_tab_1">Tasks</string>
    <string name="title_tab_2">Notes</string>
    <string name="label_private_notes">Private notes</string>


    <string name="add_task_dialog">Add Task</string>
    <string name="add_task_hint">What are you up to today?</string>
    <string name="label_priority">Priority</string>
    <string name="label_priority_no">No Priority</string>
    <string name="label_priority_1">Low</string>
    <string name="label_priority_2">Medium</string>
    <string name="label_priority_3">High</string>

    <string name="save_button">Save</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="accept_button">Accept</string>

    <string name="edit_task">Edit Task</string>


    <string name="delete_note">Delete note</string>
    <string name="delete_dialog">Are you sure you want to delete this note?</string>


    <string name="setup_pin">Set up a PIN first</string>
    <string name="title_pin_dialog">Enter your PIN</string>
    <string name="correct_pin">Correct PIN</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="pin_">_ _ _ _ _ _</string>
    <string name="pin_dialog">Please, enter the 6-digit PIN to access private notes.</string>
    <string name="pin_setup_dialog">Please, enter a 6-digit PIN to protect your private notes.</string>


    <string name="label_note">Note</string>
    <string name="label_content">Content</string>
    <string name="label_make_private">Make note private</string>

    El PIN debe tener exactamente 6 dígitos
    PIN guardado correctamente

</resources>