<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_setup_dialog"
        android:textSize="16sp"
        android:paddingBottom="16dp"/>


    <EditText
        android:id="@+id/pinEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin_"
        android:textAlignment="center"
        android:background="@android:color/transparent"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:importantForAccessibility="yes"
        android:paddingBottom="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel_button"
            android:layout_marginEnd="3dp"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit_button" />


    </LinearLayout>
</LinearLayout>
