<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NoteActivity"
    android:padding="24dp">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="22/04/2025"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:inputType="date"/>

    <EditText
        android:id="@+id/noteTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_note"
        android:textSize="18sp"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/noteDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/label_content"
        android:textSize="16sp"
        android:padding="12dp"
        android:inputType="textMultiLine"/>


    <!-- Opción para hacer la nota privada -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_make_private"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"/>

        <Switch
            android:id="@+id/privateNoteSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>


    <Button
        android:id="@+id/saveNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

</LinearLayout>